--- a/AdminPortal/src/app/user-list/user-list.component.html
+++ b/AdminPortal/src/app/user-list/user-list.component.html
@@ -6,6 +6,22 @@
                     <h5>User List
                         <small>Manage users list</small>
                     </h5>
+                    <div class="record-count-section">
+                        <label>Show
+                            <select>
+                                <option value="10">10</option>
+                                <option value="25">25</option>
+                                <option value="50">50</option>
+                                <option value="100">100</option>
+                            </select>
+
+                            entries
+                        </label>
+                        <label>
+                            Search: 
+                            <input type="text" />
+                        </label>
+                    </div>
                     <table class="table table-striped table-bordered custom-table">
                         <thead>
                             <tr>
@@ -16,7 +32,8 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr *ngFor="let user of userList | paginate : { itemsPerPage:50, currentPage:page,totalItems:totalPage, id:'first' }">
+                            <tr
+                                *ngFor="let user of userList | paginate : { itemsPerPage:15, currentPage:page,totalItems:totalPage, id:'first' }">
                                 <td data-title="First Name">{{user.FirstName}}</td>
                                 <td data-title="Last Name">{{user.LastName}}</td>
                                 <td data-title="Customer ID">{{user.MemberRefNo}}</td>
@@ -31,6 +48,10 @@
                             </tr>
                         </tbody>
                     </table>
+                    <div style="text-align:center">
+                        <pagination-controls (pageChange)="page = getUserList($event)" id="first">
+                        </pagination-controls>
+                    </div>
                 </div>
             </div>
             <!-- <div class="col-md-12">
